# index-inclusion-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
cache/: crossref_cache.json
config/: markets.yml
data/processed/: hs300_weight_change.csv
data/public/: index_research_summary.json
data/raw/: README.md  cn_csi300_changes.csv  cn_passive_aum_proxy.csv  hs300_rdd_candidates.csv  hs300_rdd_candidates.reconstructed.csv  hs300_rdd_candidates.template.csv  hs300_rdd_demo.csv  passive_aum.csv  passive_aum.template.csv  real_benchmarks.csv  real_events.csv  real_metadata.csv
docs/: CHANGELOG.md  analysis_parameters.md  cli_reference.md  dashboard_architecture.md  dashboard_commit_boundary.md  hs300_rdd_data_contract.md  hs300_rdd_l3_collection_audit.md  hs300_rdd_workflow.md  identification_roadmap.md  index_effect_literature_map.md  index_inclusion_playbook_cn.md  limitations.md  literature_deep_analysis_cn.md  literature_five_camps_framework_cn.md  literature_review_author_year_cn.md  literature_review_draft_cn.md  literature_to_project_guide.md  mypy_rollout.md  paper_outline.md  paper_outline_verdicts.md  pre_registration.md  real_data_notes.md  research_delivery_package.md  sensitivity_workflow.md  verdict_iteration.md  yahoo_vs_tushare_comparison.csv  yahoo_vs_tushare_comparison.md  yahoo_vs_tushare_comparison.tex
paper/: README.md  bundle_summary.md  manifest.json  manuscript.tex  methodology_summary.md  references.bib  skeleton.md
paper/data/: asymmetry_summary.tex  cma_gap_summary.csv  cma_time_series_break.csv  event_level_with_running.csv  evidence_refresh_manifest.json  match_balance.csv  match_robustness_grid.csv  panel_coverage.tex  pre-registration-2026-05-31.csv  rdd_summary.csv  regression_models.tex  robustness_event_study_summary.tex  time_series_event_study_summary.csv  time_series_event_study_summary.tex
paper/narrative/: hs300_rdd_l3_collection_audit.md  limitations.md  paper_outline.md  paper_outline_verdicts.md  research_delivery_package.md  verdict_iteration.md
paper/rdd/: mccrary_density_test.csv  rdd_robustness.csv  rdd_robustness.tex  rdd_status.csv  rdd_summary.csv  rdd_summary.tex  summary.md
paper/tables/: cma_hypothesis_verdicts.tex  cma_mechanism_panel.tex  event_counts_by_year.tex  event_study_summary.tex  identification_scope.tex  long_window_event_study_summary.tex  panel_coverage.tex  pap_deviation_report.csv  patell_bmp_summary.csv  results_manifest.tex  retention_summary.tex  robustness_event_study_summary.tex  robustness_retention_summary.tex  sample_scope.tex
results/event_study/: average_paths.csv  event_level_metrics.csv  event_study_summary.csv
results/literature/: citation_centrality.csv
results/real_event_study/: average_paths.csv  event_level_metrics.csv  event_study_summary.csv  long_window_event_level_metrics.csv
results/real_regressions/: match_balance.csv  match_diagnostics.csv  match_robustness_balance.csv  match_robustness_grid.csv  match_robustness_summary.md  regression_coefficients.csv  regression_dataset.csv  regression_models.csv
results/real_tables/: asymmetry_summary.csv  asymmetry_summary.tex  cma_ar_path.csv  cma_car_path.csv  cma_gap_drift_market_regression.csv  cma_gap_event_level.csv  cma_gap_summary.csv  cma_h3_channel_concentration.csv  cma_h5_limit_predictive_regression.csv  cma_h6_weight_explanation.csv  cma_h6_weight_robustness.csv  cma_h7_sector_interaction.csv  cma_heterogeneity_gap_bucket.csv  cma_heterogeneity_liquidity.csv  cma_heterogeneity_sector.csv  cma_heterogeneity_size.csv  cma_hypothesis_map.csv  cma_hypothesis_verdicts.csv  cma_hypothesis_verdicts.previous.csv  cma_hypothesis_verdicts.tex  cma_mechanism_panel.csv  cma_mechanism_panel.tex  cma_pre_runup_bootstrap.csv  cma_time_series_break.csv  cma_time_series_rolling.csv  cma_track_verdict_summary.csv  cma_window_summary.csv  data_sources.csv  data_sources.tex  event_counts.csv  event_counts.tex  event_counts_by_year.csv  event_study_summary.csv  event_study_summary.tex  identification_scope.csv  (+29 more)
scripts/: _literature_runner.py  _workflow_profiles.py  build_event_sample.py  build_price_panel.py  download_real_data.py  generate_research_report.py  generate_sample_data.py  make_figures_tables.py  match_controls.py  prepare_hs300_rdd_candidates.py  reconstruct_hs300_rdd_candidates.py  run_event_study.py  run_regressions.py  start_demand_curve_track.py  start_harris_gurel.py  start_hs300_rdd.py  start_hs300_style.py  start_identification_china_track.py  start_literature_dashboard.py  start_price_pressure_track.py  start_shleifer.py
snapshots/: pre-registration-2026-05-03.csv  pre-registration-2026-05-29.csv
tests/: conftest.py  test_add_paper.py  test_build_cma_figures.py  test_build_event_sample.py  test_build_price_panel.py  test_causal_evidence.py  test_chart_data.py  test_citation_graph.py  test_cjk_font_candidates.py  test_cma_cli.py  test_cma_dashboard_section.py  test_cma_gap_period.py  test_cma_h6_robustness.py  test_cma_heterogeneity.py  test_cma_hypotheses.py  test_cma_mechanism_panel.py  test_cma_orchestrator.py  test_cma_paths.py  test_cma_scaffolding.py  test_cma_time_series.py  test_cma_verdicts.py  test_cma_verdicts_2d_robustness.py  test_cma_verdicts_ar_engine.py  test_cma_verdicts_forest.py  test_cma_verdicts_sensitivity.py  test_cn_passive_aum_proxy.py  test_compute_h6_weight_change.py  test_dashboard_application.py  test_dashboard_bootstrap_cli.py  test_dashboard_browser_smoke.py  test_dashboard_cache.py  test_dashboard_content.py  test_dashboard_factory.py  test_dashboard_figures.py  test_dashboard_formatting.py  test_dashboard_frontend_js.py  test_dashboard_home.py  test_dashboard_loaders.py  test_dashboard_metrics.py  test_dashboard_page_runtime.py  (+72 more)
(+308 files in other folders)
