[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "index-inclusion-research"
version = "0.1.0"
description = "Cross-market event-study toolkit for index inclusion papers."
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.12",
  "statsmodels>=0.14",
]

[project.scripts]
index-inclusion-dashboard = "index_inclusion_research.dashboard_app:main"
index-inclusion-price-pressure = "index_inclusion_research.cli:run_price_pressure_track_main"
index-inclusion-demand-curve = "index_inclusion_research.cli:run_demand_curve_track_main"
index-inclusion-identification = "index_inclusion_research.cli:run_identification_china_track_main"
index-inclusion-hs300-rdd = "index_inclusion_research.cli:run_hs300_rdd_main"
index-inclusion-prepare-hs300-rdd = "index_inclusion_research.cli:run_prepare_hs300_rdd_candidates_main"
index-inclusion-reconstruct-hs300-rdd = "index_inclusion_research.cli:run_reconstruct_hs300_rdd_candidates_main"

[project.optional-dependencies]
dev = [
  "playwright>=1.54",
  "pytest>=8.0",
  "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "browser_smoke: browser-based dashboard smoke checks that are opt-in by default",
]
