[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "index-inclusion-research"
version = "0.1.0"
description = "Cross-market event-study toolkit for index inclusion papers."
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.16",
  "beautifulsoup4>=4.12",
  "flask>=3.0",
  "lxml>=5.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "yfinance>=0.2",
]

[project.scripts]
index-inclusion-dashboard = "index_inclusion_research.cli:run_dashboard_main"
index-inclusion-build-event-sample = "index_inclusion_research.cli:run_build_event_sample_main"
index-inclusion-build-price-panel = "index_inclusion_research.cli:run_build_price_panel_main"
index-inclusion-match-controls = "index_inclusion_research.cli:run_match_controls_main"
index-inclusion-run-event-study = "index_inclusion_research.cli:run_event_study_main"
index-inclusion-run-regressions = "index_inclusion_research.cli:run_regressions_main"
index-inclusion-price-pressure = "index_inclusion_research.cli:run_price_pressure_track_main"
index-inclusion-demand-curve = "index_inclusion_research.cli:run_demand_curve_track_main"
index-inclusion-identification = "index_inclusion_research.cli:run_identification_china_track_main"
index-inclusion-hs300-rdd = "index_inclusion_research.cli:run_hs300_rdd_main"
index-inclusion-prepare-hs300-rdd = "index_inclusion_research.cli:run_prepare_hs300_rdd_candidates_main"
index-inclusion-reconstruct-hs300-rdd = "index_inclusion_research.cli:run_reconstruct_hs300_rdd_candidates_main"
index-inclusion-plan-hs300-rdd-l3 = "index_inclusion_research.cli:run_plan_hs300_rdd_l3_main"
index-inclusion-prepare-passive-aum = "index_inclusion_research.cli:run_prepare_passive_aum_main"
index-inclusion-compute-h6-weight-change = "index_inclusion_research.cli:run_compute_h6_weight_change_main"
index-inclusion-refresh-real-evidence = "index_inclusion_research.cli:run_refresh_real_evidence_main"
index-inclusion-rebuild-all = "index_inclusion_research.cli:run_rebuild_all_main"
index-inclusion-verdict-summary = "index_inclusion_research.cli:run_verdict_summary_main"
index-inclusion-doctor = "index_inclusion_research.cli:run_doctor_main"
index-inclusion-generate-sample-data = "index_inclusion_research.cli:run_generate_sample_data_main"
index-inclusion-download-real-data = "index_inclusion_research.cli:run_download_real_data_main"
index-inclusion-make-figures-tables = "index_inclusion_research.cli:run_make_figures_tables_main"
index-inclusion-generate-research-report = "index_inclusion_research.cli:run_generate_research_report_main"
index-inclusion-cma = "index_inclusion_research.cli:run_cma_main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "playwright>=1.54",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.15",
  "types-PyYAML>=6.0",
  "types-requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"index_inclusion_research.web" = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["src/index_inclusion_research"]
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
exclude = [
  "src/index_inclusion_research/web/",
]

[[tool.mypy.overrides]]
module = [
  "akshare.*",
  "yfinance.*",
  "statsmodels.*",
  "matplotlib.*",
  "scipy.*",
  "bs4.*",
  "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "browser_smoke: browser-based dashboard smoke checks that are opt-in by default",
]

[tool.coverage.run]
source = ["src/index_inclusion_research"]
omit = [
  "src/index_inclusion_research/web/*",
  "src/index_inclusion_research/literature_dashboard.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
